@@ -40,7 +40,7 @@ public:
     ParserException(const std::string&);
     ParserException(const char*, int, const std::string&);
 
-    virtual std::string ice_name() const;
+    virtual const std::string& ice_name() const;
     virtual void ice_print(std::ostream&) const;
     virtual IceUtil::Exception* ice_clone() const;
     virtual void ice_throw() const;
@@ -50,6 +50,7 @@ public:
 private:
 
     std::string _reason;
+    static std::string _name;
 };
 
 class Node;
