@@ -31,7 +31,7 @@ class EvaluateException : public IceUtil::Exception
 public:
     
     EvaluateException(const char*, int, const std::string&);
-    virtual std::string ice_name() const;
+    virtual const std::string& ice_name() const;
     virtual void ice_print(std::ostream&) const;
     virtual IceUtil::Exception* ice_clone() const;
     virtual void ice_throw() const;
@@ -41,6 +41,7 @@ public:
 private:
 
     std::string _reason;
+    static std::string _name;
 };
 
 class SymbolTable
